<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/spinner"
            style="@android:style/Widget.Material.ProgressBar.Large"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:minWidth="40dp"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/spinner_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_centerInParent="true"
            android:layout_below="@id/spinner"
            android:textStyle="bold"
            android:text="@string/text_spinner" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Picture -->
        <ImageView
            android:id="@+id/picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/activity_margin"
            android:src="@drawable/maurici_picture"
            android:contentDescription="@string/content_description_picture" />

        <!-- First Name -->
        <TextView
            android:id="@+id/label_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:text="@string/label_first_name" />
        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_toEndOf="@+id/label_first_name"
            android:text="@string/placeholder_first_name" />

        <!-- Last Name -->
        <TextView
            android:id="@+id/label_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_first_name"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:text="@string/label_last_name" />
        <TextView
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_name"
            android:layout_toEndOf="@+id/label_last_name"
            android:text="@string/placeholder_last_name" />

        <!-- Gender -->
        <TextView
            android:id="@+id/label_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_last_name"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:text="@string/label_gender" />
        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/last_name"
            android:layout_toEndOf="@+id/label_gender"
            android:text="@string/placeholder_gender" />

        <!-- Age -->
        <TextView
            android:id="@+id/label_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_gender"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:text="@string/label_age" />
        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender"
            android:layout_toEndOf="@+id/label_age"
            android:text="@string/placeholder_age" />

        <!-- Phone -->
        <TextView
            android:id="@+id/label_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_age"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:text="@string/label_phone" />
        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/age"
            android:layout_toEndOf="@+id/label_phone"
            android:text="@string/placeholder_phone" />

        <!-- Phone -->
        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_phone"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:text="@string/label_email" />
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_toEndOf="@+id/label_email"
            android:text="@string/placeholder_email" />

        <!-- Button -->
        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_margin="@dimen/activity_margin"
            android:text="@string/text_new_button" />

    </RelativeLayout>
</RelativeLayout>